<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <EditText
        android:id="@+id/old_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/old_pass_edit_hint_text" />

    <EditText
        android:id="@+id/new_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_pass_edit_hint_text" />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/conf_pass_edit_hint_text" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/change_pass_btn_text" />
</LinearLayout>